# esp32_rest_api

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  idf_component.yml  main.c
main/api/: api_rest.c  api_rest.h
main/wifi/: wifi_app.c  wifi_app.h
